--- a/gitops/workloads/opensearch/opensearch.yaml
+++ b/gitops/workloads/opensearch/opensearch.yaml
@@ -20,6 +20,7 @@ spec:
                         type: workload
                     values:
                       targetRepository: '{{metadata.annotations.workloads_repo_url}}'
+                      hubTargetRevision: '{{metadata.annotations.workloads_repo_revision}}'
                       chartVersion: "3.2.1"
                 - clusters:
                     selector:
@@ -33,6 +34,7 @@ spec:
                 matchLabels:
                   role: hub         # <-- label your hub cluster secret with this
               values:
+                targetRepository: '{{metadata.annotations.workloads_repo_url}}'
                 hubTargetRevision: '{{metadata.annotations.workloads_repo_revision}}'
   template:
     metadata:
