--- a/gitops/workloads/opensearch/opensearch.yaml
+++ b/gitops/workloads/opensearch/opensearch.yaml
@@ -32,17 +32,17 @@ spec:
                 matchLabels:
                   type: hub
               values:
-                targetRepository: '{{.metadata.annotations.workloads_repo_url}}'
-                targetRevision: '{{.metadata.annotations.workloads_repo_revision}}'
+                hubTargetRepository: '{{.metadata.annotations.workloads_repo_url}}'
+                hubTargetRevision: '{{.metadata.annotations.workloads_repo_revision}}'
   template:
     metadata:
       name: opensearch-{{.name}}
     spec:
       project: default
       sources:
-        - repoURL: '{{.values.targetRepository}}'
+        - repoURL: '{{.values.hubTargetRepository}}'
           path: gitops/workloads
-          targetRevision: '{{.values.targetRevision}}'
+          targetRevision: '{{.values.hubTargetRevision}}'
           ref: workloads
         - repoURL: https://opensearch-project.github.io/helm-charts
           chart: opensearch
