--- a/gitops/workloads/opensearch/opensearch.yaml
+++ b/gitops/workloads/opensearch/opensearch.yaml
@@ -30,10 +30,10 @@ spec:
           - clusters:
               selector:
                 matchLabels:
-                  type: hubs
+                  type: hub
               values:
                 hubRepoUrl: '{{ .metadata.annotations.workloads_repo_url }}'
-                hubRepoRevision: '{{ .metadata.annotations.workloads_repo_revision }}'
+                hubRepoRevision: '{{ `{{ .metadata.annotations.workloads_repo_revision }}` }}'
   template:
     metadata:
       name: opensearch-{{.name}}
