fix: moar escape

--- a/gitops/workloads/opensearch/opensearch.yaml
+++ b/gitops/workloads/opensearch/opensearch.yaml
@@ -32,7 +32,7 @@ spec:
                 matchLabels:
                   type: hub
               values:
-                hubRepoUrl: '{{ .metadata.annotations.workloads_repo_url }}'
+                hubRepoUrl: '{{ `{{ .metadata.annotations.workloads_repo_url }}` }}'
                 hubRepoRevision: '{{ `{{ .metadata.annotations.workloads_repo_revision }}` }}'
   template:
     metadata:
